<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray"
    tools:context=".activity.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginBottom="10dp">


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/username"
            android:background="#11000000"
            android:hint="@string/username"
            android:textColorHint="@color/black"
            android:textColor="@color/black"
            android:layout_margin="10dp"
            android:padding="20dp"
            android:drawableLeft="@drawable/ic_baseline_person_2"
            android:drawablePadding="20dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/password"
            android:layout_below="@id/username"
            android:background="#11000000"
            android:hint="@string/password"
            android:textColorHint="@color/black"
            android:textColor="@color/black"
            android:layout_margin="10dp"
            android:padding="20dp"
            android:drawableLeft="@drawable/ic_baseline_lock_24"
            android:drawablePadding="20dp"
            android:inputType="textPassword"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/loginbtn"
            android:layout_below="@id/password"
            android:text="@string/connexion"
            android:textColor="@color/white"
            android:backgroundTint="@color/blue"
            android:layout_margin="20dp"
            app:cornerRadius="40dp"
            android:padding="12dp"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/user"
            android:layout_below="@id/loginbtn"
            android:text="@string/user"
            android:textColor="@color/white"
            android:backgroundTint="@color/blue"
            app:cornerRadius="40dp"
            android:layout_margin="20dp"
            android:padding="12dp"
            />


    </LinearLayout>


</RelativeLayout>